Cascading Change Log

2.5.2 [unreleased]

  Updated c.t.h.Hfs to log a warning and disable o.a.h.m.l.CombineFileInputFormat (if enabled) if
  c.t.h.HfsProps#isCombineInputSafeMode is true but the current o.a.h.mapred.InputFormat is not
  a o.a.h.mapred.FileInputFormat.

  Updated c.p.h2.Hadoop2MR1Platform to return a name consistent with other resources and artifacts for Hadoop2 MR1.

  Fixed issue in c.o.f.Logic filter sub-classes where argumentFields was not properly set causing some nested
  c.o.Filter instances to fail.

2.5.1

  Updated c.t.h.Hfs to throw an exception if the o.a.h.m.l.CombineFileInputFormat is enabled but the wrapped
  o.a.h.mapred.InputFormat is not a o.a.h.mapred.FileInputFormat.

  Fixed issue in c.c.Cascade where a race condition during start/stop/complete could result in state exception.

  Updated Hadoop 1 platform tests to enable default num task retries.

2.5.0

  Updated c.f.BaseFlow to fail when deleting resources fails.

  Updated c.t.h.PartitionTap to append sequence numbers to part files to prevent filename collisions within a task.

  Added the c.f.FlowStepListener listener interface and subsequent listener support to c.f.FlowStep. @Ahmed--Mohsen

  Updated Hadoop 1 dependency to use Hadoop 1.2.1.

  Updated c.f.h.p.HadoopFlowStepJob to call kill only jobs on that are not complete. In theory calling kill on a
  completed job should have no effect, but resulting logs could be confusing during postmortem.

  Added c.t.l.PartitionTap and c.t.h.PartitionTap to replace c.t.l.TemplateTap and c.t.h.TemplateTap respectively. The
  PartitionTap can be used as both a sink and source and provides pluggable partitioning via c.t.p.Partition.

  Added c.p.j.BufferJoin as a convenience to flag to the planner the following c.o.Buffer implements a join strategy.

  Updated c.o.BufferCall to allow access to the current c.p.j.JoinerClosure to allow for more complex join operations
  to be built out within a c.o.Buffer implementation.
